ci: Try to fix index.html building
We need to have all tags available in order to generate it

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Check out this repo
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Set up Node
       uses: actions/setup-node@v2
       with: {node-version: '14'}
