fix(publish): set write permission

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   scheduled:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
     - name: Check out this repo
